Correction de l'icône d'information en version mobile

--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,32 @@
 /****** General ***********/
+body {
+    display: flex;
+    justify-content: center;
+    margin: 0;
+}
 
 header {
     display: flex;
- justify-content: space-between;
+    justify-content: space-between;
     align-items: center;
+   
+}
+
+nav {
+    display: flex;
+    margin: 0;
+    padding: 0;
+}
+
+nav a {
+    padding: 16px 20px;
+    border-top: 2px solid transparent;
+    margin: 0;
+}
+
+nav a:hover {
+    color: #0065FC;
+    border-top: 2px solid #0065FC;
 }
 
 h1 {
@@ -17,17 +40,7 @@ h1 {
     height: auto;
 }
 
-.nav {
-    display: flex;
-    gap: 30px;
-color:black;
-padding: 10px;
-}
-.nav a:hover {
- color:#0065FC;
- border-top: 2px solid #0065FC;
- 
-}
+
 section {
 margin-top: 50px;
 }
@@ -54,7 +67,6 @@ margin-top: 50px;
 .filters{
     display:flex;
     align-items:center;
-   
     gap: 10px;
     margin-top:25px;
 }
@@ -89,7 +101,6 @@ align-items: center;
     width: 100%;
     height: 130px;
     object-fit: cover;
-
     border-top-left-radius: 20px;
     border-top-right-radius: 20px;
 }
@@ -191,11 +202,6 @@ align-items: center;
       border-radius: 15px 0 0 15px;
       color: black;
       }
-
-body {
-    display: flex;
-    justify-content: center;
-}
 
 .main-container {
     width: 100%;
@@ -525,11 +531,13 @@ margin-left: 20px;
     width: 22px;
     height: 22px;
     font-size: 13px;
+     border: 1px solid #D9D9D9;
     border-radius: 50%;
     display: flex;
     justify-content: center;
     align-items: center;
     color: #0065FC;
+    flex-shrink: 0;
 }
 
 .recherche-button .texte {
